ability to add funds to specific category
