# swagger.yaml
@@ -290,3 +290,39 @@ paths:
           description: "Successful response"
         500:
           description: "Internal server error"
+
+  /addBalance/{uid}:
+    post:
+      summary: "Add money to a specific category"
+      parameters:
+        - name: x-api-key
+          in: header
+          description: 
+          required: true
+          type: string
+        - name: uid
+          in: path
+          required: true
+          type: string
+      tags:
+        - "Income"
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                category:
+                  type: string
+                amount:
+                  type: number
+              examples:
+                application/json:
+                  category: Savings
+                  amount: 100
+      responses:
+        200:
+          description: "Successful response"
+        500:
+          description: "Internal server error"
